--- a/co.edu.uniquindio.finalprojectfx/src/main/resources/co/edu/uniquindio/finalprojectfx/finalprojectapp/Vendedor.fxml
+++ b/co.edu.uniquindio.finalprojectfx/src/main/resources/co/edu/uniquindio/finalprojectfx/finalprojectapp/Vendedor.fxml
@@ -7,12 +7,18 @@
 <?import javafx.scene.layout.*?>
 
 
-<AnchorPane prefHeight="491.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.finalprojectfx.finalprojectapp.controller.VendedorController">
+<AnchorPane prefHeight="473.0" prefWidth="709.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.finalprojectfx.finalprojectapp.controller.VendedorController">
    <children>
-      <SplitPane dividerPositions="0.6114519427402862" orientation="VERTICAL" prefHeight="491.0" prefWidth="656.0">
+      <SplitPane dividerPositions="0.6231155778894473" orientation="VERTICAL" prefHeight="473.0" prefWidth="709.0">
         <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="276.0" prefWidth="654.0" />
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" />
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="295.0" prefWidth="675.0">
+               <children>
+                  <Button layoutX="273.0" layoutY="152.0" mnemonicParsing="false" text="Button" />
+                  <Label layoutX="23.0" layoutY="31.0" prefHeight="35.0" prefWidth="67.0" text="HOLA" />
+                  <Separator layoutY="85.0" prefHeight="3.0" prefWidth="707.0" />
+               </children>
+            </AnchorPane>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="181.0" prefWidth="669.0" />
         </items>
       </SplitPane>
    </children>
