--- a/co.edu.uniquindio.finalprojectfx/src/main/resources/co/edu/uniquindio/finalprojectfx/finalprojectapp/Administrador.fxml
+++ b/co.edu.uniquindio.finalprojectfx/src/main/resources/co/edu/uniquindio/finalprojectfx/finalprojectapp/Administrador.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
@@ -7,6 +8,8 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.paint.RadialGradient?>
@@ -25,9 +28,15 @@
           </Tab>
           <Tab text="Vendedores">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #000000;">
                      <children>
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#374757b6" height="82.0" strokeType="INSIDE" width="1148.0">
+                        <Rectangle arcHeight="100.0" arcWidth="100.0" fill="#888176" height="107.0" layoutX="435.0" layoutY="618.0" stroke="BLACK" strokeType="INSIDE" style="-fx-effect: dropshadow(gaussian, rgba(0,0,0,0.75), 10, 0.5, 0, 0);" width="713.0" />
+                        <Rectangle arcHeight="100.0" arcWidth="100.0" fill="#888176" height="661.0" layoutX="14.0" layoutY="91.0" stroke="BLACK" strokeType="INSIDE" style="-fx-effect: dropshadow(gaussian, rgba(0,0,0,0.75), 10, 0.5, 0, 0);" width="387.0">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </Rectangle>
+                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#46473c" height="82.0" strokeType="INSIDE" width="1148.0">
                            <stroke>
                               <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
                                  <stops>
@@ -38,7 +47,7 @@
                                     </Stop>
                                     <Stop offset="1.0">
                                        <color>
-                                          <Color red="1.0" green="1.0" blue="1.0" />
+                                          <Color />
                                        </color>
                                     </Stop>
                                  </stops>
@@ -46,29 +55,17 @@
                            </stroke>
                         </Rectangle>
                         <Label layoutX="532.0" layoutY="36.0" />
-                        <Label layoutX="431.0" layoutY="2.0" prefHeight="85.0" prefWidth="286.0" text="NOMBRE">
+                        <Label layoutX="321.0" layoutY="1.0" prefHeight="85.0" prefWidth="596.0" style="-fx-text-fill: #FFFFFF;" text="LUXURY MARKET" textFill="WHITE">
                            <font>
                               <Font name="Arial Black" size="57.0" />
                            </font>
                         </Label>
-                        <Label layoutX="26.0" layoutY="18.0" prefHeight="51.0" prefWidth="116.0" text="CRUD admin panel" />
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="496.0" layoutX="14.0" layoutY="97.0" stroke="BLACK" strokeType="INSIDE" width="434.0" />
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="207.0" layoutX="468.0" layoutY="98.0" stroke="BLACK" strokeType="INSIDE" width="664.0" />
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="405.0" layoutX="468.0" layoutY="318.0" stroke="BLACK" strokeType="INSIDE" width="664.0" />
-                        <Label layoutX="26.0" layoutY="318.0" text="NOMBRE:" />
-                        <Label layoutX="29.0" layoutY="377.0" text="APELLIDOS:" />
-                        <Label layoutX="29.0" layoutY="427.0" text="CEDULA:" />
-                        <Label layoutX="30.0" layoutY="469.0" text="DIRECCIÓN" />
-                        <TextField fx:id="txtNombre" layoutX="101.0" layoutY="314.0" prefHeight="25.0" prefWidth="260.0" />
-                        <TextField fx:id="txtDireccion" layoutX="101.0" layoutY="465.0" prefHeight="25.0" prefWidth="260.0" />
-                        <TextField fx:id="txtCedula" layoutX="101.0" layoutY="423.0" prefHeight="25.0" prefWidth="260.0" />
-                        <TextField fx:id="txtApellidos" layoutX="101.0" layoutY="373.0" prefHeight="25.0" prefWidth="260.0" />
-                        <Button fx:id="btnNuevo" layoutX="50.0" layoutY="536.0" mnemonicParsing="false" onAction="#onNuevoVendedor" text="Nuevo" />
-                        <Button fx:id="btnAgregar" layoutX="173.0" layoutY="536.0" mnemonicParsing="false" onAction="#onAgregarVendedor" text="Agregar" />
-                        <Button fx:id="btnActualizar" layoutX="284.0" layoutY="536.0" mnemonicParsing="false" onAction="#onActualizarVendedor" text="Actualizar" />
-                        <Label layoutX="500.0" layoutY="142.0" text="USUARIO" />
-                        <Label layoutX="496.0" layoutY="211.0" text="Contraseña" />
-                        <TableView fx:id="tableVendedor" layoutX="479.0" layoutY="335.0" prefHeight="337.0" prefWidth="642.0">
+                        <Label layoutX="998.0" layoutY="11.0" prefHeight="51.0" prefWidth="116.0" style="-fx-text-fill: #FFFFFF;" text="CRUD ADMlN PANEL">
+                           <font>
+                              <Font name="Arial Black" size="10.0" />
+                           </font></Label>
+                        <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#888176" height="492.0" layoutX="428.0" layoutY="102.0" stroke="BLACK" strokeType="INSIDE" style="-fx-effect: dropshadow(gaussian, rgba(0,0,0,0.75), 10, 0.5, 0, 0)};" width="717.0" />
+                        <TableView fx:id="tableVendedor" editable="true" layoutX="463.0" layoutY="141.0" prefHeight="414.0" prefWidth="642.0" style="-fx-background-color: #2E2F26;">
                           <columns>
                             <TableColumn fx:id="tcNombre" prefWidth="111.0" text="Nombre" />
                             <TableColumn fx:id="tcApellidos" prefWidth="107.0" text="Apellido" />
@@ -78,9 +75,104 @@
                               <TableColumn fx:id="tcContrasena" prefWidth="106.0" text="Contraseña" />
                           </columns>
                         </TableView>
-                        <Button fx:id="btneEliminar" layoutX="771.0" layoutY="682.0" mnemonicParsing="false" onAction="#onEliminarVendedor" text="Eliminar" />
-                        <TextField fx:id="txtUsuario" layoutX="574.0" layoutY="138.0" prefHeight="25.0" prefWidth="260.0" />
-                        <TextField fx:id="txtContrasena" layoutX="574.0" layoutY="207.0" prefHeight="25.0" prefWidth="260.0" />
+                        <Button fx:id="btnNuevo" layoutX="514.0" layoutY="646.0" mnemonicParsing="false" onAction="#onNuevoVendedor" prefHeight="51.0" prefWidth="105.0" style="-fx-background-color: #47493C; -fx-text-fill: #ffffff; -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.3), 5, 0.5, 0, 2); -fx-border-color: #A39992; -fx-border-width: 2;" stylesheets="@Crus.css" text="Nuevo" />
+                        <Button fx:id="btnAgregar" layoutX="668.0" layoutY="645.0" mnemonicParsing="false" onAction="#onAgregarVendedor" prefHeight="53.0" prefWidth="108.0" style="-fx-background-color: #47493C; -fx-text-fill: #ffffff; -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.3), 5, 0.5, 0, 2); -fx-border-color: #A39992; -fx-border-width: 2;" stylesheets="@Crus.css" text="Agregar" />
+                        <Button fx:id="btnActualizar" layoutX="997.0" layoutY="645.0" mnemonicParsing="false" onAction="#onActualizarVendedor" prefHeight="53.0" prefWidth="108.0" style="-fx-background-color: #47493C; -fx-text-fill: #ffffff; -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.3), 5, 0.5, 0, 2); -fx-border-color: #A39992; -fx-border-width: 2;" stylesheets="@Crus.css" text="Actualizar" />
+                        <TextField fx:id="txtApellidos" layoutX="124.0" layoutY="304.0" prefHeight="29.0" prefWidth="260.0" promptText="APELLIDOS" style="-fx-background-color: transparent; -fx-border-color: transparent transparent  #47493C transparent; -fx-border-width: 0 0 2 0; -fx-padding: 5 0 5 0;">
+                           <font>
+                              <Font name="Arial Black" size="12.0" />
+                           </font></TextField>
+                        <TextField fx:id="txtNombre" layoutX="125.0" layoutY="228.0" prefHeight="29.0" prefWidth="258.0" promptText="NOMBRE" style="-fx-background-color: transparent; -fx-border-color: transparent transparent  #47493C transparent; -fx-border-width: 0 0 2 0; -fx-padding: 5 0 5 0;">
+                           <font>
+                              <Font name="Arial Black" size="12.0" />
+                           </font></TextField>
+                        <TextField fx:id="txtCedula" layoutX="124.0" layoutY="383.0" prefHeight="25.0" prefWidth="260.0" promptText="CEDULA" style="-fx-background-color: trasnparent; -fx-border-color: transparent transparent  #47493C transparent; -fx-border-width: 0 0 2 0; -fx-padding: 5 0 5 0;">
+                           <font>
+                              <Font name="Arial Black" size="12.0" />
+                           </font></TextField>
+                        <TextField fx:id="txtDireccion" layoutX="124.0" layoutY="459.0" prefHeight="25.0" prefWidth="260.0" promptText="DIRECCIÓN" style="-fx-background-color: transparent; -fx-border-color: transparent transparent  #47493C transparent; -fx-border-width: 0 0 2 0; -fx-padding: 5 0 5 0;">
+                           <font>
+                              <Font name="Arial Black" size="12.0" />
+                           </font></TextField>
+                        <TextField fx:id="txtUsuario" layoutX="124.0" layoutY="538.0" prefHeight="25.0" prefWidth="260.0" promptText="USUARIO" style="-fx-background-color: transparent; -fx-border-color: transparent transparent  #47493C transparent; -fx-border-width: 0 0 2 0; -fx-padding: 5 0 5 0;">
+                           <font>
+                              <Font name="Arial Black" size="12.0" />
+                           </font></TextField>
+                        <TextField fx:id="txtContrasena" layoutX="122.0" layoutY="614.0" prefHeight="29.0" prefWidth="260.0" promptText="CONTRASEÑA" style="-fx-background-color: transparent; -fx-border-color: transparent transparent  #47493C transparent; -fx-border-width: 0 0 2 0; -fx-padding: 5 0 5 0;">
+                           <font>
+                              <Font name="Arial Black" size="12.0" />
+                           </font></TextField>
+                        <Button fx:id="btneEliminar" layoutX="839.0" layoutY="647.0" mnemonicParsing="false" onAction="#onEliminarVendedor" prefHeight="52.0" prefWidth="108.0" style="-fx-background-color: #47493C; -fx-text-fill: #ffffff; -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.3), 5, 0.5, 0, 2); -fx-border-color: #A39992; -fx-border-width: 2;" stylesheets="@Crus.css" text="Eliminar" />
+                        <ImageView layoutX="450.0" layoutY="636.0">
+                           <image>
+                              <Image url="@Image/icons8-agregar-usuario-masculino-64.png" />
+                           </image>
+                        </ImageView>
+                        <ImageView layoutX="957.0" layoutY="653.0">
+                           <image>
+                              <Image url="@Image/icons8-actualizar-30.png" />
+                           </image>
+                        </ImageView>
+                        <ImageView layoutX="805.0" layoutY="652.0">
+                           <image>
+                              <Image url="@Image/icons8-retire-hombre-usuario-32.png" />
+                           </image>
+                        </ImageView>
+                        <Label layoutX="93.0" layoutY="99.0" prefHeight="85.0" prefWidth="229.0" style="-fx-text-fill: #FFFFFF;" text="DATOS">
+                           <font>
+                              <Font name="Arial Black" size="57.0" />
+                           </font>
+                        </Label>
+                        <ImageView layoutX="69.0" layoutY="219.0">
+                           <image>
+                              <Image url="@Image/icons8-usuario-48.png" />
+                           </image>
+                        </ImageView>
+                        <ImageView layoutX="69.0" layoutY="531.0">
+                           <image>
+                              <Image url="@Image/icons8-usuario-48.png" />
+                           </image>
+                        </ImageView>
+                        <ImageView layoutX="69.0" layoutY="295.0">
+                           <image>
+                              <Image url="@Image/icons8-editar-usuario-48.png" />
+                           </image>
+                        </ImageView>
+                        <ImageView layoutX="68.0" layoutY="604.0">
+                           <image>
+                              <Image url="@Image/icons8-contraseña-50.png" />
+                           </image>
+                        </ImageView>
+                        <ImageView fitHeight="47.0" fitWidth="45.0" layoutX="71.0" layoutY="374.0">
+                           <image>
+                              <Image url="@Image/icons8-identificación-32.png" />
+                           </image>
+                        </ImageView>
+                        <ImageView fitHeight="42.0" fitWidth="42.0" layoutX="73.0" layoutY="453.0">
+                           <image>
+                              <Image url="@Image/icons8-marcador-50.png" />
+                           </image>
+                        </ImageView>
+                        <ImageView fitHeight="40.0" fitWidth="41.0" layoutX="957.0" layoutY="653.0">
+                           <image>
+                              <Image url="@Image/icons8-actualizar-32.png" />
+                           </image>
+                        </ImageView>
+                        <ImageView fitHeight="57.0" fitWidth="57.0" layoutX="777.0" layoutY="645.0">
+                           <image>
+                              <Image url="@Image/icons8-retire-hombre-usuario-64.png" />
+                           </image>
+                        </ImageView>
+                        <ImageView fitHeight="80.0" fitWidth="85.0" layoutX="6.0">
+                           <image>
+                              <Image url="@Image/LM.png" />
+                           </image>
+                        </ImageView>
+                        <ImageView fitHeight="77.0" fitWidth="100.0" layoutX="32.0" layoutY="1.0">
+                           <image>
+                              <Image url="@Image/LM%20(1).png" />
+                           </image>
+                        </ImageView>
                      </children>
                   </AnchorPane>
             </content>
