--- a/co.edu.uniquindio.finalprojectfx/src/main/resources/co/edu/uniquindio/finalprojectfx/finalprojectapp/Login.fxml
+++ b/co.edu.uniquindio.finalprojectfx/src/main/resources/co/edu/uniquindio/finalprojectfx/finalprojectapp/Login.fxml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.shape.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import java.lang.Double?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Polygon?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="553.0" prefWidth="401.0" style="-fx-background-color: linear-gradient( #6600CC, #000000);" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.finalprojectfx.finalprojectapp.viewcontroller.LoginViewcontoller">
+<AnchorPane prefHeight="553.0" prefWidth="401.0" style="-fx-background-color: linear-gradient( #000000, #000000);" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.finalprojectfx.finalprojectapp.viewcontroller.LoginViewcontoller">
    <children>
-      <Polygon fill="DODGERBLUE" layoutX="94.0" layoutY="160.0" stroke="BLACK" strokeType="INSIDE" style="-fx-effect: dropshadow(gaussian, rgba(0,0,0,0.75), 10, 0.5, 0, 0); -fx-fill: #e0e0e0;">
+      <Polygon fill="#888176" layoutX="94.0" layoutY="160.0" stroke="BLACK" strokeType="INSIDE" style="-fx-effect: dropshadow(gaussian, rgba(0,0,0,0.75), 10, 0.5, 0, 0); -fx-fill: #888176;">
         <points>
           <Double fx:value="-94.0" />
           <Double fx:value="-160.0" />
@@ -21,28 +22,9 @@
           <Double fx:value="116.5" />
         </points>
       </Polygon>
-      <Polygon fill="DODGERBLUE" layoutX="357.0" layoutY="452.0" stroke="BLACK" strokeType="INSIDE" style="-fx-effect: dropshadow(gaussian, rgba(0,0,0,0.75), 10, 0.5, 0, 0); -fx-fill: #6600CC;">
-        <points>
-          <Double fx:value="38.0" />
-          <Double fx:value="49.0" />
-          <Double fx:value="38.0" />
-          <Double fx:value="-166.0" />
-          <Double fx:value="-124.0" />
-          <Double fx:value="-54" />
-        </points>
-      </Polygon>
-      <ImageView fitHeight="42.0" fitWidth="34.0" layoutX="14.0" layoutY="185.0" style="-fx-effect: dropshadow(gaussian, rgba(0,0,0,0.75), 10, 0.5, 0, 0);;">
-         <image>
-            <Image url="@../../../../../../../../../../../Downloads/icons8-user-30.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="42.0" fitWidth="34.0" layoutX="14.0" layoutY="244.0" style="-fx-effect: dropshadow(gaussian, rgba(0,0,0,0.75), 10, 0.5, 0, 0);;">
-         <image>
-            <Image url="@../../../../../../../../../../../Downloads/icons8-lock-50.png" />
-         </image>
-      </ImageView>
-      <TextField fx:id="txtUsuario" layoutX="54.0" layoutY="193.0" prefHeight="27.0" prefWidth="189.0" />
-      <TextField fx:id="txtContrasena" layoutX="54.0" layoutY="252.0" prefHeight="27.0" prefWidth="188.0" />
+      <Polygon fill="DODGERBLUE" layoutX="362.0" layoutY="452.0" points="38.0, 92.0, 38.0, -168.0, -148.0, -37.0" stroke="BLACK" strokeType="INSIDE" style="-fx-effect: dropshadow(gaussian, rgba(0,0,0,0.75), 10, 0.5, 0, 0); -fx-fill: #47493C;" />
+      <TextField fx:id="txtUsuario" layoutX="54.0" layoutY="193.0" prefHeight="27.0" prefWidth="189.0" promptText="Usuario" style="-fx-background-color: transparent; -fx-border-color: transparent transparent  #47493C transparent; -fx-border-width: 0 0 2 0; -fx-padding: 5 0 5 0;" />
+      <TextField fx:id="txtContrasena" layoutX="54.0" layoutY="252.0" prefHeight="27.0" prefWidth="188.0" promptText="Password" style="-fx-background-color: transparent; -fx-border-color: transparent transparent  #47493C transparent; -fx-border-width: 0 0 2 0; -fx-padding: 5 0 5 0;" />
       <Label layoutX="14.0" layoutY="108.0" text="BIENVENIDO">
          <font>
             <Font name="Apple SD Gothic Neo Heavy" size="22.0" />
@@ -53,16 +35,29 @@
             <Font name="Apple SD Gothic Neo UltraLight" size="18.0" />
          </font>
       </Label>
-      <Button fx:id="btnIngresar" layoutX="10.0" layoutY="331.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="231.0" style="-fx-background-color: linear-gradient( #6600CC, #000000); -fx-text-fill: white;" text="IINGRESAR" />
-      <ImageView fitHeight="66.0" fitWidth="60.0" layoutX="315.0" layoutY="345.0">
-         <image>
-            <Image url="@../../../../../../../../../../../Downloads/icons8-usuario-24%20(2).png" />
-         </image>
-      </ImageView>
+      <Button fx:id="btnIngresar" layoutX="10.0" layoutY="331.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="231.0" style="-fx-background-color: #47493C; -fx-border-color: #A39992; -fx-border-width: 2; -fx-text-fill: white; -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.3), 5, 0.5, 0, 2);" stylesheets="@Style.css" text="IINGRESAR">
+         <font>
+            <Font name="Roboto Bold" size="16.0" />
+         </font></Button>
       <Label layoutX="308.0" layoutY="411.0" text="LOGIN" textFill="WHITE">
          <font>
             <Font name="Apple SD Gothic Neo Heavy" size="25.0" />
          </font>
       </Label>
+      <ImageView fitHeight="36.0" fitWidth="40.0" layoutX="10.0" layoutY="249.0">
+         <image>
+            <Image url="@Image/icons8-contraseña-50.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="44.0" fitWidth="40.0" layoutX="10.0" layoutY="186.0">
+         <image>
+            <Image url="@Image/icons8-usuario-48.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="64.0" fitWidth="74.0" layoutX="309.0" layoutY="353.0">
+         <image>
+            <Image url="@Image/icons8-usuario-48%20(1).png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
